--- a/.github/workflows/pkg-publish.yml
+++ b/.github/workflows/pkg-publish.yml
@@ -26,7 +26,7 @@ jobs:
           git config --global user.email "developers@cashfree.com"
           git config --global user.name "Cashfree Payments"
           go mod tidy
-          git fetch --tags
+          git fetch
           TAG=$(git describe --tags --abbrev=0)
           GOPROXY=proxy.golang.org go list -m github.com/cashfree/cashfree_pg@"$TAG"
         env:
