--- a/.github/workflows/pkg-publish.yml
+++ b/.github/workflows/pkg-publish.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        
+      - name: Get Latest Tag
+        uses: actions-ecosystem/action-get-latest-tag@v1
+        id: get-latest-tag
 
       - name: Set up Go
         uses: actions/setup-go@v2
@@ -26,8 +30,6 @@ jobs:
           git config --global user.email "developers@cashfree.com"
           git config --global user.name "Cashfree Payments"
           go mod tidy
-          git fetch
-          TAG=$(git describe --tags --abbrev=0)
-          GOPROXY=proxy.golang.org go list -m github.com/cashfree/cashfree_pg@"$TAG"
+          GOPROXY=proxy.golang.org go list -m github.com/cashfree/cashfree_pg@"${{ steps.get-latest-tag.outputs.tag }}"
         env:
           GOPROXY: proxy.golang.org
