--- a/.github/workflows/pkg-test.yml
+++ b/.github/workflows/pkg-test.yml
@@ -18,7 +18,7 @@ jobs:
           go-version: '1.18'
 
       - name: Test
-        run: clientid=$PG_CLIENT_ID clientsecret=$PG_CLIENT_SECRET go test -race -covermode atomic -coverprofile=covprofile ./...
+        run: go mod tidy && clientid=$PG_CLIENT_ID clientsecret=$PG_CLIENT_SECRET go test -race -covermode atomic -coverprofile=covprofile ./...
         env:
           PG_CLIENT_ID: ${{ secrets.CLIENTID }}
           PG_CLIENT_SECRET: ${{ secrets.CLIENTSECRET }}
