--- a/.github/workflows/pkg-publish.yml
+++ b/.github/workflows/pkg-publish.yml
@@ -31,5 +31,12 @@ jobs:
           git config --global user.name "Cashfree Payments"
           go mod tidy
           GOPROXY=proxy.golang.org go list -m github.com/cashfree/cashfree-pg/v3@"${{ steps.get-latest-tag.outputs.tag }}"
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.TOKEN_GITHUB }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/cashfree/cashfree-pg/releases \
+            -d '{"tag_name":"${{ steps.get-latest-tag.outputs.tag }}","target_commitish":"main","name":"${{ steps.get-latest-tag.outputs.tag }}","body":"Version ${{ steps.get-latest-tag.outputs.tag }}","draft":false,"prerelease":false,"generate_release_notes":false}'
         env:
           GOPROXY: proxy.golang.org
